fix: maintain checklist changes after unsuccessful ticket update